<resources>
    <string name="app_name" translatable="false">Pickleball</string>
    <string name="title_activity_main" translatable="false">MainActivity</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="action_map" translatable="false">Map</string>
    <string name="title_activity_toolbar" translatable="false">toolbar</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings" translatable="false">Settings</string>
    <string name="menu_home" translatable="false">Home</string>
    <string name="menu_gallery" translatable="false">Gallery</string>
    <string name="menu_slideshow" translatable="false">Slideshow</string>
    <string name="create_account">Create Account</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="already_have_account">Already have an account?</string>
    <string name="signup">Sign Up</string>
    <string name="club_name">Club Name</string>
    <string name="address">Address</string>
    <string name="open_time">Open Time</string>
    <string name="phone">Phone Number</string>
    <string name="status">Operating</string>
    <string name="book">Book</string>
    <string name="map">View Map</string>
    <string name="choose_language">Choose Language</string>
    <string name="book_description">Book</string>
    <string name="book_regular_description">Book Regular</string>
    <string name="menu_edit">Edit information</string>
    <string name="menu_changepassword">Change Password</string>
    <string name="menu_translate">Language</string>
    <string name="menu_logout">Log out</string>
    <string name="menu_version">Version: 2.6.5</string>
    <string name="menu_termsandconditions">Terms &amp; Conditions</string>
    <string name="menu_deleteaccount">Delete account</string>
    <string name="horizontal_scroll_description" translatable="false">Khu vực cuộn ngang hiển thị bảng thời gian</string>
    <string name="time_slots_table" translatable="false">Bảng hiển thị các khung giờ có thể đặt</string>
    <string-array name="gender_array">
        <item>Select gender</item>
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string name="avatar">Ảnh đại diện</string>
    <string name="enter_first_name" translatable="false">Enter First Name</string>
    <string name="enter_last_name" translatable="false">Enter Last Name</string>
    <string name="enter_phone_number" translatable="false">Enter Phone Number</string>
    <string name="user_rank" translatable="false">User Rank</string>
    <string name="enter_user_rank" translatable="false">User Rank</string>
    <string name="gender" translatable="false">Gender</string>
    <string name="birthday">Birthday</string>
    <string name="save" translatable="false">Save</string>
    <string-array name="day_array">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        
        <item>31</item>
    </string-array>
    <string-array name="month_array">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        
        <item>12</item>
    </string-array>
    <string-array name="year_array">
        <item>1980</item>
        <item>1981</item>
        <item>1982</item>
        
        <item>2030</item>
    </string-array>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="re_enter_new_password">Re-enter new password</string>
    <string name="dayorder">Day Order</string>
    <string name="prompt_day">Day</string>
    <string name="prompt_month">Month</string>
    <string name="prompt_year">Year</string>
    <string name="search">Search</string>
    <string name="bookdaily">Booking daily</string>
    <string name="desBookdaily">Quick booking in one time slot (multiple courses).</string>
    <string name="bookregular">Booking regular</string>
    <string name="desBookregular">Set a fixed monthly schedule to play at a certain time (multiple courses).</string>
    <string name="slotavailable">Available</string>
    <string name="slotselecting">Selecting</string>
    <string name="slotbooked">Booked</string>
    <string name="slotlock">Lock</string>
    <string name="slotselected">Selected List</string>
    <string name="btnnext">Next</string>
    <string name="selectdate">Select date</string>
    <string name="viewcourtandprice">View court &amp; price list</string>
    <string name="bookingsuccesfully">Booking successful</string>
    <string name="detailsucessfully">Your booking has been completed.\nPlease review the details of your booking...</string>
    <string name="viewdetailbooking">VIEW BOOKING DETAILS</string>
    <string name="goback">GO BACK</string>
    <string name="schedulebook">Court booking schedule</string>
    <string name="deposit">DEPOSIT</string>
    <string name="payment">PAYMENT</string>
    <string name="bookingfail">Booking failed 😓</string>
    <string name="desbookingfail">The order has exceeded the payment time.\nPlease create a new order</string>
    <string name="viewhistory">Cancel history</string>
    <string name="gobacknor">Go back</string>
    <string name="scanQR">Scan QR</string>
    <string name="topay">To pay now 😍</string>
    <string name="timepay">Remaining payment time 🕛</string>
    <string name="methodbook">Select booking type</string>
    <string name="channel_name">General Notifications</string>
    <string name="channel_description">Notification channel for the app</string>
    <string name="default_notification_title">New Notification</string>
    <string name="default_notification_body">You have a new notification</string>
    <string name="start_date_label">Start Date: </string>
    <string name="end_date_label">End Date: </string>
    <string name="start_time_label">Start Time: </string>
    <string name="end_time_label">End Time: </string>
    <string name="error_finish_before_start_date">End date must be greater than or equal to start date!</string>
    <string name="error_invalid_date_format">Invalid date format</string>
    <string name="error_finish_before_start_time">End time must be after start time!</string>
    <string name="error_invalid_time_format">Invalid time format</string>
    <string name="toast_no_available_slots">No available slots in this period, please choose again!</string>
    <string name="toast_network_error">Network error: </string>
    <string name="header_available_courts">Available courts (multiple selection allowed):</string>
    <string name="btn_book_fixed">Book Regular</string>
    <string name="btn_book_optimized">Book Optimized</string>
    <string name="prompt_select_at_least_one">Please select at least one court</string>
    <string name="prompt_select_at_least_one_or_replacement">Please select at least one court or a replacement</string>
    <string name="toast_no_courts_available">No courts available</string>
    <string name="label_conflicting_courts">Courts already booked:</string>
    <string name="dialog_title_choose_replacement">Choose replacement court for </string>
    <string name="checkbox_none">None selected</string>
    <string name="btn_confirm">Confirm</string>
    <string name="btn_cancel">Cancel</string>
    <string name="court_booked_label">The field has been booked: </string>
    <string name="_day_label">- Day: </string>
    <string name="replace_label"> | Replace: </string>
    <string name="_day_label2"> - Day </string>
    <string name="fixed_schedule">Book Fixed Schedule</string>
    <string name="select_days_of_week">Select Days of the Week</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="time_range_label">Schedule Time Range</string>
    <string name="data_label"> Date: </string>
    <string name="no_slot_data_label">No slot data</string>
    <string name="select_time_start">Select start time</string>
    <string name="select_time_end">Select end time</string>
    <string name="hour">Hour</string>
    <string name="minute">Minute</string>
    <string name="all">All</string>
    <string name="court"> Court </string>
    <string name="no_data_label">No data</string>
    <string name="court_label">, Court name: </string>
    <string name="timeslot_label">, Time slot: </string>
    <string name="price_label">, Price: </string>
    <string name="select_timeslot">Please select at least one timeslot!</string>
    <string name="contact_label">Contact: </string>
    <string name="error_list_service_label">Service list data error</string>
    <string name="error_nodata_service_label">No service list data available</string>
    <string name="empty_service_label">Empty service list</string>
    <string name="error_data_service_label">Service data error: </string>
    <string name="no_data_service_label">No service data available</string>
    <string name="court_name_label">Court name: </string>
    <string name="address_label">Address: </string>
    <string name="infomation_service_label">Service order information:</string>
    <string name="unknown_service_label">Unknown Service</string>
    <string name="btn_payment">PAYMENT</string>
    <string name="order_service_guest">You are booking service as a Guest!</string>
    <string name="watting">Processing, please wait...</string>
    <string name="gen_service_fail">Service order creation failed!</string>
    <string name="no_data_booked">No booking data!</string>
    <string name="total_booked">Total playing time: </string>
    <string name="noti">Notification</string>
    <string name="request_invalid">Your request is incorrect, please select again!!!</string>
    <string name="error_get_total">Error getting total amount</string>
    <string name="re_select">Select again</string>
    <string name="total_price_2"><![CDATA[Total price: <b>%1$s</b>]]></string>
    <string name="error_total">Total: Error</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="cancel">Cancel</string>
    <string name="reset_password_button">RESET PASSWORD</string>
    <string name="court_price_list">Court price list</string>
    <string name="weekdays">Monday - Friday</string>
    <string name="weekends">Saturday - Sun</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="reset_password_title">Reset Your Password</string>
    <string name="reset_instructions">Enter your username, phone number, or email address to reset your password.</string>
    <string name="username_email_phone">Username / Email / Phone</string>
    <string name="remember_password">Remember your password?</string>
    <string name="login">Login</string>
    <string name="background_image">Background</string>
    <string name="warning_change_booking">
When you change your booking, if you do not complete payment for the booking you change, you will lose all bookings you have previously completed payment for.
    </string>
    <string name="accept_terms">I accept</string>
</resources>