<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_edit"
        android:title="@string/menu_edit"
        android:icon="@drawable/edit" />

    <item
        android:id="@+id/menu_changepassword"
        android:title="@string/menu_changepassword"
        android:icon="@drawable/changepassword" />

    <item
        android:id="@+id/menu_transalate"
        android:title="@string/menu_translate"
        android:icon="@drawable/translate" />

    <item
        android:id="@+id/menu_logout"
        android:title="@string/menu_logout"
        android:icon="@drawable/logout" />

    <item
        android:id="@+id/menu_version"
        android:title="@string/menu_version"
        android:icon="@drawable/version" />

    <item
        android:id="@+id/menu_deleteaccount"
        android:title="@string/menu_deleteaccount"
        android:icon="@drawable/delete" />
</menu>
